docs: add style header and start blok

--- a/shelter/sass/abstract/_constants.scss
+++ b/shelter/sass/abstract/_constants.scss
@@ -6,6 +6,9 @@ $color-heading-lite: #FFFFFF;
 $color-heading-dark: #545454;
 $color-text-dark: #4C4C4C;
 $color-text-lite: #CDCDCD;
+$color-link-hover-lite: #FAFAFA;
+$color-link-hover-dark: #292929;
+$color-button-hover-colored: #FDDCC4;
 
 
 $content-width: 1200px;
