--- a/shelter/sass/base/_base.scss
+++ b/shelter/sass/base/_base.scss
@@ -31,6 +31,9 @@ h1 {
     font-weight: 400;
     font-size: 32px;
     line-height: 110%;
+    letter-spacing: 0.06em;
+    color: $color-primari;
+    margin: 0;
 }
 h2 {
     font-family: 'Georgia', sans-serif;
