--- a/shelter/sass/layouts/_header.scss
+++ b/shelter/sass/layouts/_header.scss
@@ -1,3 +1,11 @@
 header {
+    padding-top: 30px;
     
+}
+.logo-subtitle {
+    font-size: 1.3rem;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+    margin: 10px 0 0 0;
+    color: $color-heading-lite;
 }
