--- a/shelter/sass/component/_start.scss
+++ b/shelter/sass/component/_start.scss
@@ -1,5 +1,24 @@
-.start {
+.start-background {
     background: url(noise_lines_transparent@2X.png),
      radial-gradient(100% 215.42% at 0% 0%,
       #5B483A 0%, #262425 100%), #211F20;
+    background-size: cover;
+}
+.start__content {
+  margin: 163px 42px 243px 0;
+}
+.start__title {
+  margin: 0 150px 0 0;
+  font-family: 'Georgia';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 130%;
+  color: $color-heading-lite;
+}
+.start__text {
+  margin: 42px 0;
+  font-size: 15px;
+  line-height: 160%;
+  color: $color-text-lite;
 }
