--- a/shelter/sass/style.scss
+++ b/shelter/sass/style.scss
@@ -17,3 +17,6 @@
 @import "component/donation";
 @import "component/start";
 @import "component/navigation";
+@import "component/about";
+@import "component/slider";
+@import "component/help";
