--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -14,6 +14,19 @@
     justify-content: space-between;
     margin-top: 90px;
 }
+.about__wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0 100px;
+}
+.pets__wrapper {
+    padding: 65px 0 100px 0;
+    text-align: center;
+}
+.help__wrapper {
+    text-align: center;
+    margin-top: 80px;
+}
 .navigation {
     display: flex;
     font-size: 15px;
