--- a/shelter/sass/component/_start.scss
+++ b/shelter/sass/component/_start.scss
@@ -1,5 +1,5 @@
 .start-background {
-    background: url(noise_lines_transparent@2X.png),
+    background: url(noise_lines_../assets/img/noise_transparent@2x.png),
      radial-gradient(100% 215.42% at 0% 0%,
       #5B483A 0%, #262425 100%), #211F20;
     background-size: cover;
