--- a/shelter/sass/style.scss
+++ b/shelter/sass/style.scss
@@ -14,6 +14,7 @@
 
 //Components
 @import "component/pets";
+@import "component/ourpets";
 @import "component/donation";
 @import "component/start";
 @import "component/navigation";
