--- a/shelter/sass/layouts/_footer.scss
+++ b/shelter/sass/layouts/_footer.scss
@@ -3,6 +3,10 @@ footer {
     radial-gradient(110.67% 538.64% at 5.73% 50%,
      #513D2F 0%, #1A1A1C 100%), #211F20;
      background-size: cover;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
 }
 
 .footer__title {
@@ -16,16 +20,16 @@ footer {
 }
 .footer__contacts {
     display: flex;
-    flex-wrap: wrap;
-    align-self: flex-start;
-    width: 288px;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 23.2%;
 }
-.footer__location {
+.footer__locations {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    width: 302px
+    width: 25.17%
 }
 .icon-place {
     text-decoration: none;
@@ -71,9 +75,10 @@ footer {
     color: $color-button-hover-colored;
 }
 .link_footer {
-    text-decoration: none;
-    display: inline-flex;
+    display: flex;
     align-items: center;
+    text-decoration: none;
+    gap: 20px;
     font-family: 'Georgia';
     font-style: normal;
     font-weight: 400;
@@ -81,7 +86,6 @@ footer {
     line-height: 115%;
     letter-spacing: 0.06em;
     color: #F1CDB3;
-    padding-left: 20px;
 }
 .link_footer:hover {
     color: $color-button-hover-colored;
