--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -17,7 +17,8 @@
 .about__wrapper {
     display: flex;
     justify-content: space-between;
-    margin: 70px 0 100px;
+    margin-top: 70px;
+    padding-bottom: 100px;
 }
 .pets__wrapper {
     padding: 65px 0 100px 0;
