--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -133,7 +133,8 @@ h5 {
 .about__wrapper {
   display: flex;
   justify-content: space-between;
-  margin: 70px 0 100px;
+  margin-top: 70px;
+  padding-bottom: 100px;
 }
 
 .pets__wrapper {
